sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:2: error: class Array takes type parameters
def bubbleSort(tab : Array)  {
                     ^AlgBubbleSort1:2: error: class Array takes type parameters
def bubbleSort(tab : Array)  {
                     ^